--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'China -- Social life and customs -- 1644-1912'
 - !lcsh 'Women -- China'
+- GITenberg
 title: My Lady of the Chinese Courtyard
 url: http://www.gutenberg.org/ebooks/19665
